# app/api/swagger/openapi.yaml
@@ -85,18 +85,18 @@ paths:
         "201":
           description: Contestant created
 
-  # /contests/{id}/draftable-athletes:
-  #   get:
-  #     summary: Get draftable athletes for a contest
-  #     parameters:
-  #       - name: id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: List of athletes
+  /contests/{id}/draftable-athletes:
+    get:
+      summary: Get draftable athletes for a contest
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: List of athletes
 
   /contestants/{id}/roster:
     post:
@@ -121,19 +121,6 @@ paths:
       responses:
         "201":
           description: Roster submitted
-
-  # /contestants/{id}:
-  #   get:
-  #     summary: Get contestant details
-  #     parameters:
-  #       - name: id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: Contestant details
 
   /contests/{id}/game:
     get:
